# CSV-Reader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  students_grades.csv
app/: config.py  database.py  main.py  schemas.py  services.py
app/routers/: analysis.py  grades.py
migrations/: 0001_initial.sql  0002_normalize.sql
scripts/: init_db.py  migrate.py  run_tests.py  seed_db.py
seeds/: seeds.sql
sql/: 001_init.sql
tests/: README.md  conftest.py  fixtures.py  test_analysis_endpoints.py  test_database_errors.py  test_integration.py  test_upload_errors.py
