[tool.poetry]
name = "ecom_test"
version = "0.1.0"
description = "student grades analysis API"
authors = ["you <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.135.1"
asyncpg = "0.31.0"
uvicorn = "0.42.0"
python-dotenv = "1.2.2"
python-multipart = "0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"
ruff = "^0.12"
yoyo-migrations = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
